Add a full_title helper

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,7 +4,7 @@
       = link_to "sample app", '#', id: "logo"
       %nav
         %ul.nav.pull-right
-          %li= link_to "Home",    '#'
-          %li= link_to "Help",    '#'
-          %li= link_to "Sign in", '#'
-          %li= link_to "Contact", '#'
+          %li= link_to "Home",    root_path
+          %li= link_to "Help",    help_path
+          %li= link_to "Sign in", signup_path
+          %li= link_to "Contact", contact_path
